<resources>
    <string name="app_name">Task</string>
    <string name="submit_btn">Save</string>
    <string name="frg_main_item">Values</string>
    <string name="frg_notifications_item">Settings</string>
    <string name="frg_coroutines_item">Coroutines</string>
    <string name="low_radio">High important level</string>
    <string name="medium_radio">Medium important level</string>
    <string name="max_radio">Is not important</string>
    <string name="title_imp_tv">Notifications\' important level</string>
    <string name="title_privacy_tv">Notifications\' privacy level</string>
    <string name="title_expanded_tv">Notifications\' expanding</string>
    <string name="expanded_cb">Is notification expanding</string>
    <string name="title_buttons_tv">Does buttons show?</string>
    <string name="buttons_cb">Notification buttons show up</string>
    <string name="async_cb">Async</string>
    <string name="bg_cb">Stop on background</string>
    <string name="exec_btn">Execute</string>
    <string name="notification_header">Notification header</string>
    <string name="notification_body">Notification body</string>
    <string name="dialog_title">Multiple rejections</string>
    <string name="dialog_message">Notification has been rejected</string>
    <string name="low_privacy">low privacy</string>
    <string name="secret_privacy">secret privacy</string>
    <string name="high_privacy">high privacy</string>
    <string name="more_text_below">More text below</string>
    <string name="toast_text">Opened from notifications</string>
</resources>