<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.NotificationsFragment">

    <TextView
        android:id="@+id/title_imp_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/title_imp_tv"/>
    <RadioGroup
        android:id="@+id/radio_imp_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_imp_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/title_privacy_tv">

        <RadioButton
            android:id="@+id/low_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_radio"/>

        <RadioButton
            android:id="@+id/medium_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_radio"/>

        <RadioButton
            android:id="@+id/max_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_radio"/>

    </RadioGroup>

    <TextView
        android:id="@+id/title_privacy_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_imp_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/title_privacy_tv"/>
    <RadioGroup
        android:id="@+id/radio_privacy_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_privacy_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title_expanding_tv"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp">

        <RadioButton
            android:id="@+id/public_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_privacy"/>

        <RadioButton
            android:id="@+id/secret_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_privacy"/>

        <RadioButton
            android:id="@+id/private_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_privacy"/>

    </RadioGroup>

    <TextView
        android:id="@+id/title_expanding_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radio_privacy_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/title_expanded_tv"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"/>
    <CheckBox
        android:id="@+id/expanding_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_expanding_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title_buttons_tv"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/expanded_cb"/>

    <TextView
        android:id="@+id/title_buttons_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/expanding_cb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttons_cb"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/title_buttons_tv"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"/>

    <CheckBox
        android:id="@+id/buttons_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_buttons_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/buttons_cb"/>


</androidx.constraintlayout.widget.ConstraintLayout>