<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/frg_main_item"/>
    <item
        android:id="@+id/notificationsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/frg_notifications_item" />
    <item
        android:id="@+id/coroutinesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_compare_arrows_24"
        android:title="@string/frg_coroutines_item"/>
</menu>